--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,8 @@ eureka:
   client:
     service-url:
       defaultZone: https://eureka-disc-service.herokuapp.com/eureka
+  instance:
+    hostname: zuul-gate-service.herokuapp.com
 server:
   port: 8086
 spring:
