--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -61,4 +61,4 @@ zuul:
       sensitiveHeaders:
       path: /account/**
       stripPrefix: false
-      serviceId: account-service
+      url: https://ensaspay-account-service.herokuapp.com
